--- a/~/.config/mpv/mpv.conf
+++ b/~/.config/mpv/mpv.conf
@@ -13,13 +13,15 @@ slang = en,fr,ar #DVD: prefer english subtitles
 alang = en,fr,ar #DVD: prefer english audio tracks
 
 ao = alsa,openal,pulse,
-vo = vdpau,opengl-hd,opengl,xv,wayland,drm,
+vo = vaapi,vdpau,opengl-hd,opengl,xv,wayland,drm,
 #framedrop = vo
 volume-max=600
 
 [vo.vdpau]
 hwdec=vdpau
 
+[vo.vaapi]
+hwdec=vaapi
 
 ###########################
 ## protocol based settings #
