update vim, vifm, zshn ssh, xdg configs

--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -25,21 +25,16 @@
 #   ProxyCommand ssh -q -W %h:%p gateway.example.com
 #   RekeyLimit 1G 1h
 
-Host github.com
-    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512
-    ControlMaster auto
-    ControlPath ~/.ssh/sockets/%r@%h:%p
-    ControlPersist 5m
-    ServerAliveInterval 5
-    ServerAliveCountMax 1
-    TCPKeepAlive yes
-
 Host docker-skype
   User      docker
   Port      55555
   HostName  127.0.0.1
   RemoteForward 64713 localhost:4713
   ForwardX11 yes
+
+Host centos.lan
+  User      lejenome
+  HostName  192.168.2.216
 
 Host localhost 127.0.0.1
   MACs hmac-md5
@@ -49,15 +44,8 @@ Host android.qemu
   MACs hmac-md5,hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
   KexAlgorithms diffie-hellman-group14-sha1,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
 
-# based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
-Host *
-    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
-    Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
-    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
-    Protocol 2
-    VisualHostKey yes
-    #FingerprintHash md5
 Host github.com
+  MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512
   Hostname ssh.github.com
   User git
   Port 443
@@ -70,6 +58,19 @@ Host bitbucket.org
   User git
   Port 443
 
+Host tik.tn
+  User      root
+  Port      443
+  HostName  vps431007.ovh.net
+
+# based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
+Host *
+    KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
+    Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
+    Protocol 2
+    VisualHostKey yes
+    #FingerprintHash md5
 Host *
 #    proxycommand socat - PROXY:10.30.0.11:%h:%p,proxyport=8080,proxyauth=11050096:lo66e3z9
     ControlMaster auto
