--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -62,6 +62,7 @@ ${endif}${endif}${endif}
 ${template0 down enp1s0}
 ${template0 down wlp2s0}
 ${template0 down enp0s1u1}
+${template0 down enp0s1u2}
 {"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
@@ -70,6 +71,7 @@ ${endif}${endif}${endif}
 ${template0 up enp1s0}
 ${template0 up wlp2s0}
 ${template0 up enp0s1u1}
+${template0 up enp0s1u2}
 {"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
 ${endif}${endif}${endif}
 
@@ -115,11 +117,11 @@ ${endif}
 
 # RSS
 {"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
-	${if_match ${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
-		{"full_text":"${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+${if_match ${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
+	${if_match ${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
+		{"full_text":"${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
 	${else}
-		{"full_text":"${texeci 60 newsbeuter -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
+		{"full_text":"${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
 	${endif}
 ${else}
 	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
