--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -17,7 +17,7 @@
 #   IdentityFile ~/.ssh/id_dsa
 #   Cipher 3des
 #   Ciphers aes128-ctr,aes192-ctr,aes256-ctr,arcfour256,arcfour128,aes128-cbc,3des-cbc
-#   MACs hmac-md5,hmac-sha1,umac-64@openssh.com,hmac-ripemd160
+#   MACs hmac-md5,hmac-sha1,umac-64@openssh.com
 #   EscapeChar ~
 #   Tunnel no
 #   TunnelDevice any:any
@@ -41,7 +41,7 @@ Host localhost 127.0.0.1
   KexAlgorithms diffie-hellman-group1-sha1
 
 Host android.qemu
-  MACs hmac-md5,hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
+  MACs hmac-md5,hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
   KexAlgorithms diffie-hellman-group14-sha1,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
 
 Host github.com
@@ -59,15 +59,17 @@ Host bitbucket.org
   Port 443
 
 Host tik.tn
-  User      root
-  Port      443
+  User      lejenome
+  Port      110
   HostName  vps431007.ovh.net
+  TCPKeepAlive yes
+  ServerAliveInterval 60
 
 # based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
 Host *
     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
     Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
-    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
     Protocol 2
     VisualHostKey yes
     #FingerprintHash md5
