--- a/~/.config/i3/config
+++ b/~/.config/i3/config
@@ -253,4 +253,6 @@ for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [window_role="About"] floating enable
 for_window [class="mpv"] floating enable
+for_window [class="pinentry"] floating enable
+for_window [class="Pinentry"] floating enable
 for_window [class="Glade-previewer"] floating enable
