--- a/~/.config/git/config
+++ b/~/.config/git/config
@@ -1,6 +1,6 @@
 [user]
-	name = "Moez Bouhlel"
-	email = "bmoez.j@gmail.com"
+	name = Moez Bouhlel
+	email = lejenome@tik.tn
 	signingkey = "73659C9D"
 
 [commit]
