--- a/~/.config/gtk-3.0/settings.ini
+++ b/~/.config/gtk-3.0/settings.ini
@@ -8,8 +8,8 @@ gtk-decoration-layout = menu:
 # More privacy: disable ~/.local/share/recently-used.xbel
 gtk-recent-files-enabled = false
 gtk-recent-files-max-age = 0
-# show last input char on password field for 600ms
-gtk-entry-password-hint-timeout = 400
+# show last input char on password field for n ms
+gtk-entry-password-hint-timeout = 200
 gtk-print-preview-command = zathura %f
 gtk-shell-shows-desktop = 0
 #gtk-im-module = ibus,xim
