--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -116,16 +116,16 @@ ${endif}
 ${endif}
 
 # RSS
-{"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
-${if_match ${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
-	${if_match ${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
-		{"full_text":"${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
-	${else}
-		{"full_text":"${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
-	${endif}
-${else}
-	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
-${endif}
+#{"full_text":"\uF09e","color":"\#949494","separator":false,"separator_block_width":6},
+#${if_match ${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0} > 0}
+#	${if_match ${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0} <= 10}
+#		{"full_text":"${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#b27d12","separator":false,"separator_block_width":6},
+#	${else}
+#		{"full_text":"${texeci 60 newsboat -x print-unread | grep -o "[0-9]*" || echo 0}","color":"\#924020","separator":false,"separator_block_width":6},
+#	${endif}
+#${else}
+#	{"full_text":"0","color":"\#909737","separator":false,"separator_block_width":6},
+#${endif}
 
 #TODO.TXT
 {"full_text":"\uF03A","color":"\#949494","separator":false,"separator_block_width":6},
