--- a/~/.config/mpv/mpv.conf
+++ b/~/.config/mpv/mpv.conf
@@ -13,7 +13,7 @@ slang = en,fr,ar #DVD: prefer english subtitles
 alang = en,fr,ar #DVD: prefer english audio tracks
 
 ao = alsa,openal,pulse,
-vo = vaapi,vdpau,opengl-hd,opengl,xv,wayland,drm,
+vo = vaapi,vdpau,opengl-hd,gpu,xv,wayland,drm,
 #framedrop = vo
 volume-max=600
 
