--- a/~/.config/pip/pip.conf
+++ b/~/.config/pip/pip.conf
@@ -1,12 +1,12 @@
 [install]
-user = true
+# user = true
 
 [bundle]
-user = true
+# user = true
 
 [freeze]
-user = true
+# user = true
 
 [list]
-user = true
+# user = true
 format = columns
