--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -36,10 +36,6 @@ Host centos.lan
   User      lejenome
   HostName  192.168.2.216
 
-Host localhost 127.0.0.1
-  MACs hmac-md5
-  KexAlgorithms diffie-hellman-group1-sha1
-
 Host android.qemu
   MACs hmac-md5,hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
   KexAlgorithms diffie-hellman-group14-sha1,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
@@ -58,20 +54,39 @@ Host bitbucket.org
   User git
   Port 443
 
-Host tik.tn
+Host tik.vps431007
   User      lejenome
   Port      110
-  HostName  vps431007.ovh.net
+  HostName  vps431007.tik.tn
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.vps633711
+  User      admin
+  Port      110
+  HostName  vps633711.tik.tn
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host djagora
+  HostName 10.30.0.250
+  User pi
   TCPKeepAlive yes
   ServerAliveInterval 60
 
 # based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
 Host *
+    HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa,ecdsa-sha2-nistp521-cert-v01@openssh.com,ecdsa-sha2-nistp384-cert-v01@openssh.com,ecdsa-sha2-nistp256-cert-v01@openssh.com,ecdsa-sha2-nistp521,ecdsa-sha2-nistp384,ecdsa-sha2-nistp256
     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
     Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
     Protocol 2
     VisualHostKey yes
+    HashKnownHosts yes
     #FingerprintHash md5
 Host *
 #    proxycommand socat - PROXY:10.30.0.11:%h:%p,proxyport=8080,proxyauth=11050096:lo66e3z9
