--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -16,16 +16,18 @@ bind -n WheelUpPane copy-mode -e
 #set -g mouse-select-window on
 
 # set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-window-option -g pane-border-style fg=colour235 #base02
+set-window-option -g pane-active-border-style fg=colour240 #base01
 
 # reload ~/.tmux.conf
 unbind ^R
 bind ^R source-file ~/.tmux.conf \; display "Reloaded!"
 
-# copy/paste/urlview : c/v/u
-bind c run "tmux save-buffer - | xsel -ib"
-bind v run "tmux set-buffer -- \"$(xsel -ob)\"; tmux paste-buffer"
+#  copy/paste/urlview : c/v/u
+# bind c run "tmux save-buffer - | xsel -ib"
+# bind v run "tmux set-buffer -- \"$(xsel -ob)\"; tmux paste-buffer"
+bind c run "tmux save-buffer - | wl-copy"
+bind v run "tmux set-buffer -- \"$(wl-paste)\"; tmux paste-buffer"
 bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n "urlview" '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
 # Set the prefix to ^A.
