--- a/~/.config/redshift.conf
+++ b/~/.config/redshift.conf
@@ -3,13 +3,13 @@
 ; Set the color temperatures to 5500K during the day and 3500K during the night.
 ; These are the default values since version 1.9.
 temp-day=5500
-temp-night=4500
+temp-night=3500
 
 ; Set the monitor brightness (artifical backlight) to 90%. Default is 1.0 (100%).
 ;brightness=0.9
 ; It is also possible to use different settings for day and night since version 1.8.
 ;brightness-day=0.7
-;brightness-night=0.4
+brightness-night=0.4
 
 ; Enable/Disable a smooth transition between day and night:
 ; 0 will cause a direct change from daytime settings to night settings.
