--- a/~/.config/gnupg/gpg.conf
+++ b/~/.config/gnupg/gpg.conf
@@ -1,4 +1,4 @@
-default-key 73659C9D
+default-key 3A1DADDD332D2EFBF81621C384D8572173659C9D
 armor
 #pinentry-mode loopback ## force reading pw from stdin # may break some functions use --pinentry-mode loopback instead
 #use-agent
@@ -16,6 +16,12 @@ charset utf-8
 no-mangle-dos-filenames
 keyserver http://http-keys.gnupg.net
 keyserver hkp://keys.gnupg.net
+# keyserver hkp://keyserver.ubuntu.com
+# keyserver hkp://pool.sks-keyservers.net
+# keyserver hkp://pgp.key-server.io
+# keyserver hkp://pgp.mit.edu
+# keyserver  hkp://keys.openpgp.org
+
 #keyserver mailto:pgp-public-keys@keys.nl.pgp.net
 #
 
