--- a/~/.config/i3/conky.conf
+++ b/~/.config/i3/conky.conf
@@ -128,10 +128,10 @@ ${endif}
 #${endif}
 
 #TODO.TXT
-{"full_text":"\uF03A","color":"\#949494","separator":false,"separator_block_width":6},
-{"full_text":"${execi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
-{"full_text":"${execi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
-{"full_text":"${execi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
+# {"full_text":"\uF03A","color":"\#949494","separator":false,"separator_block_width":6},
+# {"full_text":"${execi 30 todo.sh ls | grep -i "(A)" | wc -l}","color":"\#924020","separator":false,"separator_block_width":6},
+# {"full_text":"${execi 30 todo.sh ls | grep -i "(B)" | wc -l}","color":"\#b27d12","separator":false,"separator_block_width":6},
+# {"full_text":"${execi 30 todo.sh ls | wc -l}","color":"\#909737","separator":false,"separator_block_width":6},
 
 {"full_text":"\uF019","color":"\#949494","separator":false,"separator_block_width":6},
 ${execi 10 ~/.config/i3/aria2c-stat.py }
