--- a/~/.config/mpv/mpv.conf
+++ b/~/.config/mpv/mpv.conf
@@ -7,7 +7,8 @@ no-video-unscaled
 #heartbeat-cmd =
 #heartbeat-interval = 120
 
-cache = 100000
+cache = yes
+demuxer-max-bytes = 123k
 
 slang = en,fr,ar #DVD: prefer english subtitles
 alang = en,fr,ar #DVD: prefer english audio tracks
@@ -28,25 +29,25 @@ hwdec=vaapi
 ############################
 
 [protocol.http]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.http_proxy]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.mmst]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.mms]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.rtp]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.rtsp]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.icyx]
-cache-initial = 1000
+# cache-initial = 1000
 
 [protocol.dvdnav]
-cache= 10000
+# cache= 10000
