--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -54,29 +54,117 @@ Host bitbucket.org
   User git
   Port 443
 
-Host tik.vps431007
-  User      lejenome
-  Port      110
-  HostName  vps431007.tik.tn
-  TCPKeepAlive yes
-  ServerAliveInterval 60
-  PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+# Host tik.vps431007
+#   User      lejenome
+#   Port      110
+#   HostName  vps431007.tik.website
+#   TCPKeepAlive yes
+#   ServerAliveInterval 60
+#   PasswordAuthentication no
+#   IdentityFile ~/.ssh/id_ed25519
 
 Host tik.vps633711
   User      admin
   Port      110
-  HostName  vps633711.tik.tn
+  HostName  vps633711.tik.website
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
   IdentityFile ~/.ssh/id_ed25519
 
-Host djagora
-  HostName 10.30.0.250
-  User pi
+Host tik.vps762569
+  User      admin
+  Port      110
+  HostName  vps762569.tik.website
   TCPKeepAlive yes
   ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.vps802333
+  User      admin
+  Port      110
+  # HostName  vps802333.ovh.net
+  HostName  51.38.36.148
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.lms0001
+  User      admin
+  Port      110
+  HostName  lms0001.tik.website
+  HostName  51.178.66.65
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.lms0002
+  User      admin
+  Port      110
+  HostName  lms0002.tik.website
+  HostName  51.38.53.194
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+# Host tik.lms0003
+#   User      admin
+#   Port      110
+#   HostName  lms0003.tik.website
+#   HostName  51.83.36.64
+#   TCPKeepAlive yes
+#   ServerAliveInterval 60
+#   PasswordAuthentication no
+#   IdentityFile ~/.ssh/id_ed25519
+
+Host tik.lms0004
+  User      admin
+  Port      110
+  HostName  lms0004.tik.website
+  HostName  188.165.208.10
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.lms0005
+  User      admin
+  Port      110
+  HostName  lms0005.tik.website
+  HostName  54.37.188.96
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.lms0006 lms0006.tik.website
+  User      admin
+  Port      110
+  HostName  lms0006.tik.website
+  HostName  94.23.34.136
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+Host tik.lms0007 lms0007.tik.website
+  User      admin
+  Port      110
+  HostName  lms0007.tik.website
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  IdentityFile ~/.ssh/id_ed25519
+
+# Host djagora
+#   HostName 10.30.0.250
+#   User pi
+#   TCPKeepAlive yes
+#   ServerAliveInterval 60
 
 # based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
 Host *
