--- a/~/.config/alacritty/alacritty.yml
+++ b/~/.config/alacritty/alacritty.yml
@@ -32,9 +32,8 @@ window:
   # Window decorations
   # Setting this to false will result in window without borders and title bar.
   decorations: none
+  dynamic_title: true
 
-# Display tabs using this many cells (changes require restart)
-tabspaces: 8
 
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
@@ -169,12 +168,9 @@ colors:
 #
 # To completely disable the visual bell, set its duration to 0.
 #
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
-
-# Background opacity
-background_opacity: 1.0
 
 # Mouse bindings
 #
@@ -215,8 +211,6 @@ mouse:
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
-
-dynamic_title: true
 
 # Live config reload (changes require restart)
 live_config_reload: true
